templates/rewine-backend_template.yaml
---
# Source: rewine-backend/templates/deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      alpha.image.policy.openshift.io/resolve-names: '*'
      app.openshift.io/vcs-ref: summit2021
      app.openshift.io/vcs-uri: https://github.com/Red-Wine-Software/backend
      openshift.io/generated-by: OpenShiftWebConsole
    labels:
      app: backend
      app.kubernetes.io/component: backend
      app.kubernetes.io/instance: backend
      app.kubernetes.io/name: java
      app.kubernetes.io/part-of: rewine
      app.openshift.io/runtime: java
      app.openshift.io/runtime-version: openjdk-11-el7
    name: backend
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: backend
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: backend
          deploymentconfig: backend
      spec:
        containers:
        - image: image-registry.openshift-image-registry.svc:5000/default/backend
          imagePullPolicy: Always
          name: backend
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
---
# Source: rewine-backend/templates/imagestream.yaml
apiVersion: v1
items:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      app.openshift.io/vcs-ref: summit2021
      app.openshift.io/vcs-uri: https://github.com/Red-Wine-Software/backend
      openshift.io/generated-by: OpenShiftWebConsole
    labels:
      app: backend
      app.kubernetes.io/component: backend
      app.kubernetes.io/instance: backend
      app.kubernetes.io/name: java
      app.kubernetes.io/part-of: rewine
      app.openshift.io/runtime: java
      app.openshift.io/runtime-version: openjdk-11-el7
    name: backend
  spec:
    lookupPolicy:
      local: false
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
---
# Source: rewine-backend/templates/pipeline.yaml
apiVersion: v1
items:
- apiVersion: tekton.dev/v1beta1
  kind: Pipeline
  metadata:
    labels:
      app: backend
      app.kubernetes.io/instance: backend
      pipeline.openshift.io/runtime: java
      pipeline.openshift.io/type: kubernetes
    name: backend
  spec:
    params:
    - default: backend
      name: APP_NAME
      type: string
    - default: https://github.com/Red-Wine-Software/backend
      name: GIT_REPO
      type: string
    - default: summit2021
      name: GIT_REVISION
      type: string
    - default: image-registry.openshift-image-registry.svc:5000/default/backend
      name: IMAGE_NAME
      type: string
    - default: .
      name: PATH_CONTEXT
      type: string
    tasks:
    - name: fetch-repository
      params:
      - name: url
        value: $(params.GIT_REPO)
      - name: revision
        value: $(params.GIT_REVISION)
      - name: subdirectory
        value: ""
      - name: deleteExisting
        value: "true"
      taskRef:
        kind: ClusterTask
        name: git-clone
      workspaces:
      - name: output
        workspace: workspace
    - name: build
      params:
      - name: IMAGE
        value: $(params.IMAGE_NAME)
      - name: TLSVERIFY
        value: "false"
      - name: PATH_CONTEXT
        value: $(params.PATH_CONTEXT)
      runAfter:
      - fetch-repository
      taskRef:
        kind: ClusterTask
        name: s2i-java-11
      workspaces:
      - name: source
        workspace: workspace
    - name: deploy
      params:
      - name: SCRIPT
        value: kubectl $@
      - name: ARGS
        value:
        - rollout
        - status
        - deploy/$(params.APP_NAME)
      runAfter:
      - build
      taskRef:
        kind: ClusterTask
        name: openshift-client
    workspaces:
    - name: workspace
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
---
# Source: rewine-backend/templates/route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    labels:
      app: backend
      app.kubernetes.io/component: backend
      app.kubernetes.io/instance: backend
      app.kubernetes.io/name: java
      app.kubernetes.io/part-of: rewine
      app.openshift.io/runtime: java
      app.openshift.io/runtime-version: openjdk-11-el7
    name: backend
  spec:
    port:
      targetPort: 8080-tcp
    tls:
      termination: edge
    to:
      kind: Service
      name: backend
      weight: 100
    wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
---
# Source: rewine-backend/templates/service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      app.openshift.io/vcs-ref: summit2021
      app.openshift.io/vcs-uri: https://github.com/Red-Wine-Software/backend
      openshift.io/generated-by: OpenShiftWebConsole
    labels:
      app: backend
      app.kubernetes.io/component: backend
      app.kubernetes.io/instance: backend
      app.kubernetes.io/name: java
      app.kubernetes.io/part-of: rewine
      app.openshift.io/runtime: java
      app.openshift.io/runtime-version: openjdk-11-el7
    name: backend
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    selector:
      app: backend
      deploymentconfig: backend
    sessionAffinity: None
    type: ClusterIP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
